--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Daniel Carrillo"
-  avatar           : "profile.png"
+  avatar           : "Daniel-Carrillo"
   bio              : "Estudiante  PUCP"
   location         : "Lima,Perú"
   employer         :
