--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Daniel Carrillo"
   avatar           : "Daniel-Carrillo.jpg"
-  bio              : "Estudiante  PUCP"
-  location         : "Lima,Perú"
+  bio              : "Student PUCP"
+  location         : "Lima, Perú"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
