--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Daniel Carrillo"
 title_separator          : "-"
 name                     : &name "Daniel Carrillo"
-description              : &description "personal description"
+description              : &description "Student-PUCP"
 url                      : https://deecc.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "deecc/deecc.github.io"
